<resources>
    <string name="app_name">OnlStay</string>
    <string name="header_2">Bạn muốn đi đâu?</string>
    <string name="Near_you">Gần bạn</string>
    <string name="title_1">Các thành phố nổi tiếng</string>

    <string name="nav_home">Trang chủ</string>
    <string name="nav_favor">Yêu thích</string>
    <string name="nav_book">Đặt phòng</string>
    <string name="nav_account">Tài khoản</string>

    <string name="sign_up">Đăng ký/ Đăng nhập</string>
    <string name="login">Đăng nhập bằng địa chỉ gmail</string>
    <string name="info_user">XEM THÔNG TIN</string>

    <string name="welcome">Chào mừng bạn đến với Onlstay!</string>
    <string name="login_email">ĐĂNG NHẬP VỚI GOOGLE</string>
    <string name="login_facebook">ĐĂNG NHẬP VỚI FACEBOOK</string>

    <string name="owner">Trở thành chủ nhà</string>

    <string name="ads">Ưu đãi độc quyền</string>
    <string name="ads_1">Chỉ có tại Onlstay, hấp dẫn và hữu hạn, book ngay</string>


    <string name="ads_1.1">Kỳ nghỉ an lành với "Thẻ xanh"</string>
    <string name="ads_1.2">Đã bao lâu rồi bạn chưa được đi đâu đó? Việc di chuyển bị hạn chế bởi dịch bệnh thì
        một chuyến du lịch tại chính nơi bạn đang sinh sống, không cần phải đi đến bất cứ nơi nào xa lạ là sự lựa chọn hoàn hảo.</string>

    <string name="ads_1.4">Nhập mã THEXANH giảm ngay 30.000đ cho các phòng tối thiểu 200k</string>

    <string name="ads_1.3">Onlstay tặng bạn mã giảm giá khi đặt homestay để bạn tận hưởng khoảng khắc yên bình</string>

    <string name="ads_1.5">Thời gian áp dụng: Từ 1/4/2022 đến 1/5/2022 </string>

    <string name="ads_2">Du lịch Hè</string>

    <string name="ads_2.1">Mùa hè là mùa du lịch sôi động nhất trong năm, khi bạn có thể thỏa thích lên rừng xuống biển, vi vu trong
        và ngoài nước. Mùa hè mùa nghỉ học là cơ hội cho cả gia đình có cơ hội đi du lịch bên nhau. Với chương trình
        "Đi trọn thế gian - Hè tràn cảm xúc" ONlSTAY sẽ cùng bạn và gia đình đi trọn thế gian này nhé. Rất nhiều quà tặng và ưu đãi,
        đặc biệt giá tour cũng rất "giải nhiệt".</string>

    <string name="ads_2.2">Ưu đãi đãi tháng 5 – Tour trọn gói hấp dẫn giảm đến 50%</string>


    <string name="recommand">Gợi ý từ Onlstay</string>
    <string name="recommand_1">Những địa điểm thường đến từ Onlstay gợi ý dành cho bạn</string>


    <string-array name="rcm_1">
        <item>Vi vu ngoại thành Hà Nội</item>
        <item>Vũng Tàu biệt thự hồ bơi</item>
        <item>Hà Nội nội thành lãng mạn</item>
        <item>Sài Gòn cần là có ngay</item>
        <item>Bể bơi và BBQ</item>
        <item>Siêu giảm giá!</item>
        <item>Gần trung tâm!</item>
    </string-array>

    <string-array name="rcm_2">
        <item>Trải nghiệm không gian thoáng đãng, cho chuyến đi ngay gần Hà Nội</item>
        <item>Những căn biệt thự có hồ bơi dành cho kỳ nghỉ của bạn tại Vũng Tàu</item>
        <item>Không gian lãng mạn dành cho cặp đôi tại trung tâm Hà Nội</item>
        <item>Những căn homestay có 01 phòng ngủ tại Sài Gòn có thể đặt nhanh chóng</item>
        <item>Trải nghiệm đẳng cấp tại những căn homestay có bể bơi đẹp và khu vực</item>
        <item>Top chỗ ở giảm giá đến 50% từ các chủ nhà thân thiện trên Onlstay</item>
        <item>Dễ dàng di chuyển khắp nơi với top chỗ ở khu vực trung tâm thành phố</item>
    </string-array>

    <string name="experience">Trải nghiệm đáng nhớ</string>
    <string name="exp_1">Ở mỗi thành phố xa xôi, giữ lại cho mình một chốn dừng chân ấm áp</string>

    <string-array name="list_city">
        <item>	An Giang	</item>
        <item>	Bà Rịa - Vũng Tàu	</item>
        <item>	Bắc Giang	</item>
        <item>	Bắc Kạn	</item>
        <item>	Bạc Liêu	</item>
        <item>	Bắc Ninh	</item>
        <item>	Bến Tre	</item>
        <item>	Bình Định	</item>
        <item>	Bình Dương	</item>
        <item>	Bình Phước	</item>
        <item>	Bình Thuận	</item>
        <item>	Cà Mau	</item>
        <item>	Cần Thơ	</item>
        <item>	Cao Bằng	</item>
        <item>	Đà Nẵng	</item>
        <item>	Đắk Lắk	</item>
        <item>	Đắk Nông	</item>
        <item>	Điện Biên	</item>
        <item>	Đồng Nai	</item>
        <item>	Đồng Tháp	</item>
        <item>	Gia Lai	</item>
        <item>	Hà Giang	</item>
        <item>	Hà Nam	</item>
        <item>	Hà Nội	</item>
        <item>	Hà Tĩnh	</item>
        <item>	Hải Dương	</item>
        <item>	Hải Phòng	</item>
        <item>	Hậu Giang	</item>
        <item>	Hòa Bình	</item>
        <item>	Hưng Yên	</item>
        <item>	Khánh Hòa	</item>
        <item>	Kiên Giang	</item>
        <item>	Kon Tum	</item>
        <item>	Lai Châu	</item>
        <item>	Lâm Đồng	</item>
        <item>	Lạng Sơn	</item>
        <item>	Lào Cai	</item>
        <item>	Long An	</item>
        <item>	Nam Định	</item>
        <item>	Nghệ An	</item>
        <item>	Ninh Bình	</item>
        <item>	Ninh Thuận	</item>
        <item>	Phú Thọ	</item>
        <item>	Phú Yên	</item>
        <item>	Quảng Bình	</item>
        <item>	Quảng Nam	</item>
        <item>	Quảng Ngãi	</item>
        <item>	Quảng Ninh	</item>
        <item>	Quảng Trị	</item>
        <item>	Sóc Trăng	</item>
        <item>	Sơn La	</item>
        <item>	Tây Ninh	</item>
        <item>	Thái Bình	</item>
        <item>	Thái Nguyên	</item>
        <item>	Thanh Hóa	</item>
        <item>	Thừa Thiên Huế	</item>
        <item>	Tiền Giang	</item>
        <item>	Thành phố Hồ Chí Minh	</item>
        <item>	Trà Vinh	</item>
        <item>	Tuyên Quang	</item>
        <item>	Vĩnh Long	</item>
        <item>	Vĩnh Phúc	</item>
        <item>	Yên Bái	</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ads1">Ads_activity_1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>