<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="20dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="10dp"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/account"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:id="@+id/txtUserName"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="16dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/txtUserEmail"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/backgound"
                    android:backgroundTint="#FFA500"
                    android:text="Thoát ra"
                    android:textColor="@color/white" />



            </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_client"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:background="@drawable/backgound"
        android:backgroundTint="@color/purple_700"
        android:clickable="true"
        android:text="Khách hàng"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_owner"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:background="@drawable/backgound"
        android:backgroundTint="@color/editText"
        android:clickable="true"
        android:text="@string/owner"
        android:textColor="@color/black" />
</LinearLayout>